2008-12-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-slashdot.el (shimbun-slashdot-get-headers): Don't use
	member-ignore-case that's unavailable in XEmacs 21.4.

2008-12-23  David Engster  <dengste@eml.cc>

	* sb-sueddeutsche-de.el (shimbun-sueddeutsche-de-group-url): Removed
	kino group since feed is broken.
	(shimbun-get-headers, shimbun-rss-build-message-id): Adapt to new URL
	scheme.

	* sb-slashdot.el (sb-multi): Removed.
	(shimbun-slashdot-group-url): Changed frontpage URL.
	(shimbun-slashdot-regexp-section-id-subject): Adapt regexp.
	(shimbun-slashdot-regexp-author-time): Changed for better date parsing.
	(shimbun-slashdot-regexp-comment-system): Removed.
	(shimbun-slashdot-get-headers): Adapt to new site design.  Improved
	date parsing.  Immediately retrieve old comment system.  Removed
	catch/throw since new articles need not be at the top.
	(shimbun-multi-next-url): Removed.
	(shimbun-clear-contents): Changed due to removal of sb-multi.  Set
	quotes in italics.

2008-12-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-aljazeera.el (shimbun-aljazeera-content-end): Add comment.
	(sb-aljazeera-wash-article): Look for content-start and content-end.

	* sb-nytimes.el (shimbun-nytimes-japanese-hankaku): Default to `never'.
	(shimbun-nytimes-clear-contents, shimbun-get-headers): Replace wide
	apostrophe with the normal one.

	* sb-multi.el (toplevel): Load sb-text for shimbun-shallow-rendering
	when compiling; autoload sb-text for shimbun-fill-line at run-time.
	(shimbun-multi-retrieve-next-pages): Support making text/plain articles.

	* sb-sankei.el (shimbun-sankei-clear-contents): Don't break long lines
	in text/plain articles.

	* sb-asahi.el (shimbun-asahi-content-start)
	(shimbun-asahi-text-content-start): Update.

2008-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-itmedia.el (shimbun-itmedia-content-start): Don't exclude author's
	face icon.

2008-12-10  David Engster  <dengste@eml.cc>
